# matrix_otus_hw06

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  matrix.h  test_access.cpp  test_access_sq.cpp  test_loop.cpp  test_op.cpp
